styles/main.css
/* ... */
.prototype-btn:hover {
  background-color: #FFFCC0;
  color: #141414;
}

#conclusion {
  padding-bottom: 3rem;
}

/** IMAGES **/

.project-images {
  align-items: center;
  display: flex;
  height: 90%;
  justify-content: center;
  margin: 0 auto;
  max-width: 800px;
  width: 90%;
}

.bot-margin {
  margin-bottom: 0;
}


/**** Virtuoso ****/

.virt-research-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.virt-research-list li {
  align-items: center;
  display: flex;
  flex-direction: column;
  padding: 2rem;
  text-align: center;
}

.research-icon {
  margin-bottom: 2rem;
  max-height: 200px;
  max-width: 200px;
  width: 100%;
}

/**** CARGO ****/

#enemy-logos {
  height: 75%;
  width: 75%;
}


/******* ABOUT PAGE CSS *******/

/** CHOOSE YOUR DAN **/

.about-header {
  background-image: url("../images/CYD/arcade.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #EFEFEF;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  margin-bottom: 5rem;
  position: relative;
  width: 100%;
}

.about-header-container {
  max-width: 1600px;
  margin: 0 auto 7rem auto;
  padding: 2rem;
  position: relative;
  width: 100%;
}

.about-title {
  color: #FFFCC0;
  margin: 3% 8% 30px 8%;
  text-align: center;
}

.about-title h4 {
  font-weight: 400;
}

.CYD-slideshow-container {
  margin: 0 auto;
  max-width: 450px;
  position: relative;
  z-index: 2;
}

.mySlides {
  display: none;
}

.text-center {
  text-align: center;
}

.CYD-slide-text {
  margin: 8% auto;
  height: 140px;
}

.CYD-prev, .CYD-next {
  border-radius: 0 3px 3px 0;
  color: #FFFCC0;
  cursor: pointer;
  font-size: 3.6rem;
  font-weight: bold;
  margin: 0 4%;
  padding: 5px 5px;
  position: absolute;
  top: 20%;
  user-select: none;
}

.CYD-next {
  right: 0;
}

.CYD-prev:hover, .CYD-next:hover {
  text-shadow: 0 0 30px #FFFCC0;
}

.intro-set {
  align-items: center;
  display: flex;
  flex-direction: row;
  margin-top: 1rem;
}

.intro-icon {
  max-width: 3rem;
  margin-right: 2rem;
}

.intro-icon:hover {
  box-shadow: 0 0 8px #FFFCC0;
}

/** PHOTO SUBTITLE **/

.PS-section {
  position: relative;
  margin: 3rem auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.PS-text {
  text-align: center;
  font-size: 1.6rem;
}

.PS-image {
  width: 100%;
  max-width: inherit;
  margin-bottom: 1rem;
}

/** BOTTOM LINKS **/

.hidden-link {
  text-decoration: none;
  color: inherit;
  font-weight: bold;
}

/****** CONTACT PAGE *******/

.contact-section {
  margin: 0 auto;
  padding: 2rem 0;
}

.contact-form {
  margin: 0 auto;
  max-width: 1200px;
  padding: 2rem 4rem;
  position: relative;
}

.contact-area {
  margin-left: 2rem;
  width: 100%;
}

.contact-form-header {
  margin: 2rem 2rem;
}

.contact-form label {
  font-family: raleway, sans-serif;
  font-size: 2rem; /* 20 px */
  font-weight: 400;
  line-height: 3.2rem; /* 32px */
}

.contact-input {
  background-color: #EFEFEF;
  border: 1px solid #141414;
  border-radius: 3px;
  color: #141414;
  display: block;
  font-family: 'Open Sans', sans-serif;
  font-size: 1.4rem; /* 14px */
  height: 4rem;
  line-height: 2.2rem; /* 22px */
  margin-bottom: 1.8rem;
  padding: 0 1rem;
  width: 80%;
}

#message {
  background-color: #EFEFEF;
  border: 1px solid #141414;
  border-radius: 3px;
  color: #141414;
  display: block;
  font-family: 'Open Sans', sans-serif;
  font-size: 1.4rem; /* 14px */
  line-height: 2.2rem; /* 22px */
  margin-bottom: 6rem;
  padding: 1rem;
  resize: none;
  width: 80%;
}

.contact-btn {
  background-color: #EFEFEF;
  border: 1px solid #141414;
  bottom: 0;
  color: #141414;
  display: block;
  font-family: raleway, sans-serif;
  font-size: 1.8rem; /* 18px */
  font-weight: 400;
  margin: 2rem;
  padding: .8rem 1.8rem;
  position: absolute;
  width: max-content;
}

.contact-btn:hover {
  background-color: #141414;
  color: #EFEFEF;
}


/******* MEDIA QUERIES ********/

@media only screen and (min-width: 400px) {
  .container {
    max-width: 600px;
  }

  .nav-contents {
    max-width: 100%;
  }

  .image {
  max-width: 400px;
  }

  .CYD-prev, .CYD-next {
  top: 25%;
  }

  .top-me {
  display: block;
  }

  .display-project-text {
  width: 65%;
  margin: 1rem;
  }

}
/* ... */

